--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -268,24 +268,22 @@
 .ms-Button.ms-Button--command {
 	background-color: transparent;
 	border: none;
-	height: 30px;
-	line-height: 30px;
+	height: 32px;
+	line-height: 32px;
 	min-width: 0;
-	padding: 0 10px;
+	padding: 0 8px;
 	text-align: left;
+	font-size: @ms-font-size-m;
 	
 	.ms-Button-icon {
 		color: @ms-color-neutralSecondary;
 		display: inline-block;
-		font-size: @ms-font-size-s;
-		margin-right: 5px;
+		margin-right: 4px;
 		position: relative;
-		top: -1px;
 	}
 
 	.ms-Button-label {
 		font-family: @ms-font-family-regular;
-		font-size: @ms-font-size-s;
 	}
 
 	&:hover, 
