--- a/src/components/Callout/Callout.Close.html
+++ b/src/components/Callout/Callout.Close.html
@@ -8,10 +8,10 @@
     </button>
     <div class="ms-Callout-inner">
       <div class="ms-Callout-content">
-        <p class="ms-Callout-subText ms-Callout-subText--s">Message body is optional. If help documentation is available, consider adding a link to learn more at the bottom.</p>
+        <p class="ms-Callout-subText">Message body is optional. If help documentation is available, consider adding a link to learn more at the bottom.</p>
       </div>
       <div class="ms-Callout-actions">
-        <a href="#" class="ms-Callout-link ms-Link">Learn more</a>
+        <a href="#" class="ms-Callout-link ms-Link ms-Link--hero">Learn more</a>
       </div>
     </div>
   </div>
