--- a/src/components/ContextualMenu/ContextualMenu.Dividers.html
+++ b/src/components/ContextualMenu/ContextualMenu.Dividers.html
@@ -7,7 +7,7 @@
   <li class="ms-ContextualMenu-item ms-ContextualMenu-item--divider"></li>
   <li class="ms-ContextualMenu-item">
     <a class="ms-ContextualMenu-link ms-ContextualMenu-link--hasMenu" href="#">Move</a>
-    <i class="ms-ContextualMenu-caretRight ms-Icon ms-Icon--caretRight"></i>
+    <i class="ms-ContextualMenu-subMenuIcon ms-Icon ms-Icon--chevronRight"></i>
     <ul class="ms-ContextualMenu">
       <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Flag</a></li>
       <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Important</a></li>
