--- a/src/components/ContextualMenu/ContextualMenu.SubMenu.html
+++ b/src/components/ContextualMenu/ContextualMenu.SubMenu.html
@@ -2,7 +2,7 @@
   <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Animals</a></li>
   <li class="ms-ContextualMenu-item">
     <a class="ms-ContextualMenu-link ms-ContextualMenu-link--hasMenu" href="#">Books</a>
-    <i class="ms-ContextualMenu-caretRight ms-Icon ms-Icon--caretRight"></i>
+    <i class="ms-ContextualMenu-subMenuIcon ms-Icon ms-Icon--chevronRight"></i>
     <ul class="ms-ContextualMenu">
       <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Fiction</a></li>
       <li class="ms-ContextualMenu-item"><a class="ms-ContextualMenu-link" href="#">Humor</a></li>
