--- a/src/components/Toggle/Toggle.html
+++ b/src/components/Toggle/Toggle.html
@@ -1,4 +1,4 @@
-<div class="ms-Toggle">
+<div class="ms-Toggle ms-Toggle--textLeft">
   <span class="ms-Toggle-description">Let apps use my location</span>
   <input type="checkbox" id="demo-toggle-1" class="ms-Toggle-input" />
   <label for="demo-toggle-1" class="ms-Toggle-field">
@@ -7,10 +7,28 @@
   </label>
 </div>
 
-<div class="ms-Toggle">
+<div class="ms-Toggle ms-Toggle--textLeft">
   <span class="ms-Toggle-description">Let apps access my name, picture, and other domain</span>
   <input type="checkbox" id="demo-toggle-2" class="ms-Toggle-input" />
   <label for="demo-toggle-2" class="ms-Toggle-field">
+    <span class="ms-Label ms-Label--off">Off</span>
+    <span class="ms-Label ms-Label--on">On</span>
+  </label>
+</div>
+
+<div class="ms-Toggle ms-Toggle--textAbove">
+  <span class="ms-Toggle-description">Let apps use my location</span>
+  <input type="checkbox" id="demo-toggle-3" class="ms-Toggle-input" />
+  <label for="demo-toggle-3" class="ms-Toggle-field">
+    <span class="ms-Label ms-Label--off">Off</span>
+    <span class="ms-Label ms-Label--on">On</span>
+  </label>
+</div>
+
+<div class="ms-Toggle ms-Toggle--textAbove">
+  <span class="ms-Toggle-description">Let apps access my name, picture, and other domain</span>
+  <input type="checkbox" id="demo-toggle-4" class="ms-Toggle-input" />
+  <label for="demo-toggle-4" class="ms-Toggle-field">
     <span class="ms-Label ms-Label--off">Off</span>
     <span class="ms-Label ms-Label--on">On</span>
   </label>
