- Added missing mixins for animations and flexbox. - Changed mixins to Camel Cased. - Updated dependencies on those mixins to match new Camel Casing.

--- a/src/components/Dialog/Dialog.less
+++ b/src/components/Dialog/Dialog.less
@@ -26,8 +26,8 @@
   text-align: center;
 
   // Flexbox for Modern Browsers
-	.flex-block();
-	.align-items(center); 
+	.flexBox();
+	.alignItems(center); 
 
 	&::before {
   	.dialogPositioningIE9Fallback();
