--- a/src/less/_Fabric.Animations.less
+++ b/src/less/_Fabric.Animations.less
@@ -18,10 +18,10 @@
 
 // Animation mixin
 .animationMix(@ms-name; @ms-duration; @ms-ease: @ms-ease1; @ms-fillMode: both) {
-    .animation-name(@ms-name);
-    .animation-duration(@ms-duration);
-    .animation-timing-function(@ms-ease);
-    .animation-fill-mode(@ms-fillMode);
+    .animationName(@ms-name);
+    .animationDuration(@ms-duration);
+    .animationTiming(@ms-ease);
+    .animationFillMode(@ms-fillMode);
 }
 
 // slideRightIn40
