Removed deprecated classes from Fabric Less files and updated references in components.

--- a/src/components/Button/Button.less
+++ b/src/components/Button/Button.less
@@ -69,7 +69,7 @@
 .ms-Button-label {
 	color: @ms-color-neutralPrimary;
 	font-family: @ms-font-family-semibold;
-	font-size: @ms-font-size-m;
+	font-size: @ms-fontSize-m;
 }
 
 .ms-Button-icon, 
@@ -125,7 +125,7 @@
 	.ms-Button-icon {
 		color: @ms-color-themePrimary;
 		display: inline-block;
-		font-size: @ms-font-size-s;
+		font-size: @ms-fontSize-s;
 		position: relative;
 		top: 1px;
 
@@ -135,7 +135,7 @@
 			height: 18px;
 			line-height: 18px;
 			width: 18px;
-			font-size: @ms-font-size-s;
+			font-size: @ms-fontSize-s;
 			margin: 0;
 		}
 	}
@@ -143,7 +143,7 @@
 	.ms-Button-label {
 		color: @ms-color-themePrimary;
 		font-family: @ms-font-family-light;
-		font-size: @ms-font-size-xl;
+		font-size: @ms-fontSize-xl;
 		position: relative;
 		top: -5px;
 	}
@@ -208,7 +208,7 @@
 		color: @ms-color-neutralSecondary;
 		display: block;
 		font-family: @ms-font-family-regular;
-		font-size: @ms-font-size-s;
+		font-size: @ms-fontSize-s;
 		position: relative;
 		text-align: left;
 		top: 3px;
@@ -277,7 +277,7 @@
 	.ms-Button-icon {
 		color: @ms-color-neutralSecondary;
 		display: inline-block;
-		font-size: @ms-font-size-s;
+		font-size: @ms-fontSize-s;
 		margin-right: 5px;
 		position: relative;
 		top: -1px;
@@ -285,7 +285,7 @@
 
 	.ms-Button-label {
 		font-family: @ms-font-family-regular;
-		font-size: @ms-font-size-s;
+		font-size: @ms-fontSize-s;
 	}
 
 	&:hover, 
