--- a/src/components/Callout/Callout.Oobe.html
+++ b/src/components/Callout/Callout.Oobe.html
@@ -1,6 +1,6 @@
 <div class="ms-Callout">
   <div class="ms-Callout-main">
-    <div class="ms-Callout-header ms-Callout-header--l ms-bg-color-themePrimary">
+    <div class="ms-Callout-header ms-Callout-header--l ms-bgColor-themePrimary">
       <p class="ms-Callout-title">All of your favorite people</p>
     </div>
     <div class="ms-Callout-inner">
