--- a/src/components/Callout/Callout.less
+++ b/src/components/Callout/Callout.less
@@ -176,7 +176,7 @@
   top: 5px;
   right: 5px;
   padding: 5px;
-  font-size: @ms-font-size-m;
+  font-size: @ms-fontSize-m;
   color: @ms-color-neutralSecondary;
   z-index: (@ms-zIndex-Callout + @ms-zIndex-front);
 }
@@ -199,7 +199,7 @@
   // Title - set size and color
   .ms-Callout-title {
     font-family: @ms-font-family-semilight;
-    font-size: @ms-font-size-l;
+    font-size: @ms-fontSize-l;
     color: @ms-color-neutralPrimary;
   }
 
@@ -222,7 +222,7 @@
     // Title - set size and color
     .ms-Callout-title {
       font-family: @ms-font-family-semilight;
-      font-size: @ms-font-size-l;
+      font-size: @ms-fontSize-l;
       color: @ms-color-white;
     }
   }
@@ -258,11 +258,11 @@
   color: @ms-color-neutralPrimary;
 
   &.ms-Callout-subText--s {
-    font-size: @ms-font-size-s;
+    font-size: @ms-fontSize-s;
   }
 
   &.ms-Callout-subText--m {
-    font-size: @ms-font-size-m;
+    font-size: @ms-fontSize-m;
   }
 }
 
@@ -272,7 +272,7 @@
 .ms-Callout-subTitle {
   margin: 0;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-l;
+  font-size: @ms-fontSize-l;
   color: @ms-color-neutralPrimary;
 }
 
@@ -314,7 +314,7 @@
 // Action text
 .ms-Callout-actionText {
   font-size: 14px !important;
-  .ms-font-weight-regular !important;
+  .ms-fontWeight-regular !important;
 }
 
 // Callout buttons - spacing between buttons
