--- a/src/components/ContextualMenu/ContextualMenu.less
+++ b/src/components/ContextualMenu/ContextualMenu.less
@@ -48,7 +48,7 @@
   // Headers
   &.ms-ContextualMenu-item--header {
     color: @ms-color-themePrimary;
-    font-size: @ms-font-size-s;
+    font-size: @ms-fontSize-s;
     text-transform: uppercase;
     height: 20px;
     padding-left: 30px;
@@ -91,7 +91,7 @@
         color: @ms-color-black;
         line-height: 40px;
 
-        .ms-font-weight-semibold;
+        .ms-fontWeight-semibold;
 
         &:hover {
             background-color: @ms-color-themeLight;
@@ -138,7 +138,7 @@
         .ms-Icon;
         color: @ms-color-neutralPrimary;
         content: '\e041';
-        font-size: @ms-font-size-s;
+        font-size: @ms-fontSize-s;
         height: 39px;
         line-height: 40px;
         position: absolute;
