--- a/src/components/Dialog/Dialog.less
+++ b/src/components/Dialog/Dialog.less
@@ -76,7 +76,7 @@
 
   .ms-Icon.ms-Icon--x {
     color: @ms-color-neutralSecondary;
-    font-size: @ms-font-size-m + 2;
+    font-size: @ms-fontSize-m + 2;
   }
 }
 
@@ -95,7 +95,7 @@
 .ms-Dialog-title {
   margin: 0;
   font-family: @ms-font-family-light;
-  font-size: @ms-font-size-xl;
+  font-size: @ms-fontSize-xl;
 }
 
 .ms-Dialog-content {
@@ -113,7 +113,7 @@
   padding-top: 8px;
   font-family: @ms-font-family-semilight;
   color: @ms-color-neutralPrimary;
-  font-size: @ms-font-size-s;
+  font-size: @ms-fontSize-s;
 }
 
 .ms-Dialog-actions {
@@ -189,7 +189,7 @@
   }
 
   .ms-Dialog-subText {
-    font-size: @ms-font-size-m;
+    font-size: @ms-fontSize-m;
   }
 }
 
