--- a/src/components/Dropdown/Dropdown.less
+++ b/src/components/Dropdown/Dropdown.less
@@ -63,7 +63,7 @@
 
 .ms-Dropdown-caretDown {
   color: @ms-color-neutralSecondary;
-  font-size: @ms-font-size-l;
+  font-size: @ms-fontSize-l;
   position: absolute;
   right: 9px;
   top: 9px;
