--- a/src/components/ListItem/ListItem.less
+++ b/src/components/ListItem/ListItem.less
@@ -28,7 +28,7 @@
 .ms-ListItem-primaryText {
   color: @ms-color-neutralDark;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-xl;
+  font-size: @ms-fontSize-xl;
   padding-right: 80px; // Prevent overlap with up to three actions.
   position: relative;
   top: -4px;
@@ -37,7 +37,7 @@
 .ms-ListItem-secondaryText {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-regular;
-  font-size: @ms-font-size-m;
+  font-size: @ms-fontSize-m;
   line-height: 25px;
   position: relative;
   top: -7px;
@@ -46,7 +46,7 @@
 .ms-ListItem-tertiaryText {
   color: @ms-color-neutralSecondaryAlt;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-m;
+  font-size: @ms-fontSize-m;
   line-height: 15px;
   position: relative;
   top: -7px;
@@ -55,7 +55,7 @@
 .ms-ListItem-metaText {
   color: @ms-color-neutralPrimary;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-xs;
+  font-size: @ms-fontSize-xs;
   position: absolute;
   right: 30px;
   top: 39px;
@@ -260,7 +260,7 @@
     .noWrap;
     color: @ms-color-neutralPrimary;
     font-family: @ms-font-family-semilight;
-    font-size: @ms-font-size-m;
+    font-size: @ms-fontSize-m;
     padding-top: 15px;
     padding-right: 0;
     position: static;
@@ -271,7 +271,7 @@
     .noWrap;
     color: @ms-color-neutralSecondary;
     font-family: @ms-font-family-regular;
-    font-size: @ms-font-size-xs;
+    font-size: @ms-fontSize-xs;
     padding-top: 6px;
 
   }
