--- a/src/components/PeoplePicker/PeoplePicker.less
+++ b/src/components/PeoplePicker/PeoplePicker.less
@@ -125,7 +125,7 @@
 .ms-PeoplePicker-resultGroupTitle {
     color: @ms-color-themePrimary;
     font-family: @ms-font-family-semilight;
-    font-size: @ms-font-size-s;
+    font-size: @ms-fontSize-s;
     padding: 17px 0 0 12px;
     text-transform: uppercase;
     height: 40px;
@@ -196,7 +196,7 @@
 
   .ms-Icon {
     color: @ms-color-neutralSecondary;
-    font-size: @ms-font-size-m-plus;
+    font-size: @ms-fontSize-mPlus;
     margin-top: -8px;
     position: absolute;
     text-align: center;
@@ -308,7 +308,7 @@
 
   .ms-Icon {
     color: @ms-color-neutralPrimary;
-    font-size: @ms-font-size-xl + 3;
+    font-size: @ms-fontSize-xl + 3;
     position: absolute;
     text-align: center;
     top: 27px;
@@ -325,7 +325,7 @@
 // Secondary text
 .ms-PeoplePicker-searchMoreSecondary {
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-xs;
+  font-size: @ms-fontSize-xs;
   color: @ms-color-neutralSecondary;
 }
 
@@ -347,7 +347,7 @@
   .ms-PeoplePicker-searchMorePrimary {
     color: @ms-color-neutralSecondary;
     font-family: @ms-font-family-semilight;
-    font-size: @ms-font-size-xs;
+    font-size: @ms-fontSize-xs;
     line-height: 20px;
   }
 }
@@ -389,13 +389,13 @@
     width: 50px;
 
     .ms-Icon {
-      font-size: @ms-font-size-l;
+      font-size: @ms-fontSize-l;
       margin-top: -12px;
     }
   }
 
   .ms-PeoplePicker-searchMorePrimary {
-    font-size: @ms-font-size-s;
+    font-size: @ms-fontSize-s;
   }
 
   .ms-PeoplePicker-searchMoreSecondary {
