--- a/src/components/Persona/Persona.less
+++ b/src/components/Persona/Persona.less
@@ -58,14 +58,14 @@
 	.ms-Persona-primaryText {
 		color: @ms-color-neutralPrimary;
 		font-family: @ms-font-family-regular;
-		font-size: @ms-font-size-l;
+		font-size: @ms-fontSize-l;
 		margin-top: -3px;
 		white-space: nowrap;
 	}
 	.ms-Persona-secondaryText, .ms-Persona-tertiaryText, .ms-Persona-optionalText {
 		color: @ms-color-neutralSecondary;
 		font-family: @ms-font-family-regular;
-		font-size: @ms-font-size-s;
+		font-size: @ms-fontSize-s;
 		padding-top: 7px;
 		white-space: nowrap;
 	}
@@ -104,7 +104,7 @@
 		.ms-Persona-primaryText {
 			color: @ms-color-neutralPrimary;
 			font-family: @ms-font-family-regular;
-			font-size: @ms-font-size-m;
+			font-size: @ms-fontSize-m;
 			padding-top: 11px;
 		}
 		.ms-Persona-secondaryText, .ms-Persona-tertiaryText, .ms-Persona-optionalText {
@@ -137,7 +137,7 @@
 			width: 4px;
 		}
 		.ms-Persona-primaryText {
-			font-size: @ms-font-size-m;
+			font-size: @ms-fontSize-m;
 			padding-top: 3px;
 		}
 		.ms-Persona-secondaryText {
@@ -161,7 +161,7 @@
 			width: 4px;
 		}
 		.ms-Persona-primaryText {
-			font-size: @ms-font-size-m;
+			font-size: @ms-fontSize-m;
 			padding-top: 1px;
 		}
 		.ms-Persona-secondaryText {
@@ -211,7 +211,7 @@
 			padding-left: 20px;
 		}
 		.ms-Persona-primaryText {
-			font-size: @ms-font-size-xl;
+			font-size: @ms-fontSize-xl;
 			font-family: @ms-font-family-semilight;
 			margin-top: 2px;
 		}
