--- a/src/components/PersonaCard/PersonaCard.less
+++ b/src/components/PersonaCard/PersonaCard.less
@@ -118,7 +118,7 @@
 
 .ms-PersonaCard-overflow {
   .ms-PersonaCard-action;
-  font-size: @ms-font-size-m;
+  font-size: @ms-fontSize-m;
   font-family: @ms-font-family-semilight;
   color: @ms-color-neutralPrimary;
   float: right;
@@ -237,7 +237,7 @@
 .ms-PersonaCard-detailExpander {
   color: @ms-color-neutralPrimary;
   cursor: pointer;
-  font-size: @ms-font-size-m-plus;
+  font-size: @ms-fontSize-mPlus;
   height: 30px;
   line-height: 30px;
   margin-top: 1px;
