--- a/src/components/SearchBox/SearchBox.less
+++ b/src/components/SearchBox/SearchBox.less
@@ -35,7 +35,7 @@
     border: 1px solid @ms-color-themeTertiary;
     border-radius: 0;
     font-family: @ms-font-family-semilight;
-    font-size: @ms-font-size-m;
+    font-size: @ms-fontSize-m;
     color: @ms-color-black;
     height: 30px;
     padding: 6px 3px 7px 8px;
@@ -88,7 +88,7 @@
   // Close icon
   .ms-Icon {
     line-height: 31px;
-    font-size: @ms-font-size-l;
+    font-size: @ms-fontSize-l;
     color: @ms-color-white;
   }
 }
@@ -100,13 +100,13 @@
   top: 5px;
   padding-left: 10px;
   font-family: @ms-font-family-semilight;
-  font-size: @ms-font-size-m;
+  font-size: @ms-fontSize-m;
   color: @ms-color-neutralSecondary;
 }
 
 // Icon
 .ms-SearchBox-icon {
   margin-right: 5px;
-  font-size: @ms-font-size-l;
+  font-size: @ms-fontSize-l;
   color: @ms-color-neutralSecondaryAlt;
 }
