--- a/src/components/Toggle/Toggle.less
+++ b/src/components/Toggle/Toggle.less
@@ -20,7 +20,7 @@
     position: relative;
     padding-left: 56px;
     top: -8px;
-    font-size: @ms-font-size-s;
+    font-size: @ms-fontSize-s;
   }
 
   // States
@@ -82,7 +82,7 @@
 // Description text
 .ms-Toggle-description {
   position: relative;
-  font-size: @ms-font-size-s;
+  font-size: @ms-fontSize-s;
   vertical-align: top;
 }
 
