--- a/src/less/_Fabric.Animations.less
+++ b/src/less/_Fabric.Animations.less
@@ -25,8 +25,7 @@
 }
 
 // slideRightIn40
-.ms-u-slideRightIn40,
-.slideRightIn40 {
+.ms-u-slideRightIn40 {
     .animationMix(fadeIn, slideRight40; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes slideRight40 {
@@ -39,8 +38,7 @@
 }
 
 // slideLeftIn40
-.ms-u-slideLeftIn40,
-.slideLeftIn40 {
+.ms-u-slideLeftIn40 {
     .animationMix(fadeIn, slideLeft40; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes slideLeft40 {
@@ -53,8 +51,7 @@
 }
 
 // slideRightIn400
-.ms-u-slideRightIn400,
-.slideRightIn400 {
+.ms-u-slideRightIn400 {
     .animationMix(fadeIn, slideRight400; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes slideRight400 {
@@ -67,8 +64,7 @@
 }
 
 // slideLeftIn400
-.ms-u-slideLeftIn400,
-.slideLeftIn400 {
+.ms-u-slideLeftIn400 {
     .animationMix(fadeIn, slideLeft400; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes slideLeft400 {
@@ -81,8 +77,7 @@
 }
 
 // slideUpIn20
-.ms-u-slideUpIn20,
-.slideUpIn20 {
+.ms-u-slideUpIn20 {
     .animationMix(fadeIn, slideUp20; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes slideUp20 {
@@ -95,8 +90,7 @@
 }
 
 // slideUpIn10
-.ms-u-slideUpIn10,
-.slideUpIn10 {
+.ms-u-slideUpIn10 {
     .animationMix(fadeIn, slideUp10; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideUp10 {
@@ -109,8 +103,7 @@
 }
 
 // slideDownIn20
-.ms-u-slideDownIn20,
-.slideDownIn20 {
+.ms-u-slideDownIn20 {
     .animationMix(fadeIn, slideDown20; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes slideDown20 {
@@ -123,8 +116,7 @@
 }
 
 // slideDownIn10
-.ms-u-slideDownIn10,
-.slideDownIn10 {
+.ms-u-slideDownIn10 {
     .animationMix(fadeIn, slideDown10; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideDown10 {
@@ -137,8 +129,7 @@
 }
 
 // slideRightOut40
-.ms-u-slideRightOut40,
-.slideRightOut40 {
+.ms-u-slideRightOut40 {
     .animationMix(fadeOut, slideRightOut40; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideRightOut40 {
@@ -151,8 +142,7 @@
 }
 
 // slideLeftOut40
-.ms-u-slideLeftOut40,
-.slideLeftOut40 {
+.ms-u-slideLeftOut40 {
     .animationMix(fadeOut, slideLeftOut40; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideLeftOut40 {
@@ -165,8 +155,7 @@
 }
 
 // slideRightOut400
-.ms-u-slideRightOut400,
-.slideRightOut400 {
+.ms-u-slideRightOut400 {
     .animationMix(fadeOut, slideRightOut400; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideRightOut400 {
@@ -179,8 +168,7 @@
 }
 
 // slideLeftOut400
-.ms-u-slideLeftOut400,
-.slideLeftOut400 {
+.ms-u-slideLeftOut400 {
     .animationMix(fadeOut, slideLeftOut400; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideLeftOut400 {
@@ -193,8 +181,7 @@
 }
 
 // slideUpOut20
-.ms-u-slideUpOut20,
-.slideUpOut20 {
+.ms-u-slideUpOut20 {
     .animationMix(fadeOut, slideUpOut20; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideUpOut20 {
@@ -207,8 +194,7 @@
 }
 
 // slideUpOut10
-.ms-u-slideUpOut10,
-.slideUpOut10 {
+.ms-u-slideUpOut10 {
     .animationMix(fadeOut, slideUpOut10; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideUpOut10 {
@@ -221,8 +207,7 @@
 }
 
 // slideDownOut20
-.ms-u-slideDownOut20,
-.slideDownOut20 {
+.ms-u-slideDownOut20 {
     .animationMix(fadeOut, slideDownOut20; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideDownOut20 {
@@ -235,8 +220,7 @@
 }
 
 // slideDownOut10
-.ms-u-slideDownOut10,
-.slideDownOut10 {
+.ms-u-slideDownOut10 {
     .animationMix(fadeOut, slideDownOut10; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes slideDownOut10 {
@@ -249,8 +233,7 @@
 }
 
 // scaleUpIn100
-.ms-u-scaleUpIn100,
-.scaleUpIn100 {
+.ms-u-scaleUpIn100 {
     .animationMix(fadeIn, scaleUp100; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes scaleUp100 {
@@ -263,8 +246,7 @@
 }
 
 // scaleDownIn100
-.ms-u-scaleDownIn100,
-.scaleDownIn100 {
+.ms-u-scaleDownIn100 {
     .animationMix(fadeIn, scaleDown100; @ms-duration3; @ms-ease1);
 }
 @-webkit-keyframes scaleDown100 {
@@ -277,8 +259,7 @@
 }
 
 // scaleUpOut103
-.ms-u-scaleUpOut103,
-.scaleUpOut103 {
+.ms-u-scaleUpOut103 {
     .animationMix(fadeOut, scaleUp103; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes scaleUp103 {
@@ -291,8 +272,7 @@
 }
 
 // scaleDownOut98
-.ms-u-scaleDownOut98,
-.scaleDownOut98 {
+.ms-u-scaleDownOut98 {
     .animationMix(fadeOut, scaleDown98; @ms-duration1; @ms-ease2);
 }
 @-webkit-keyframes scaleDown98 {
@@ -305,8 +285,7 @@
 }
 
 // fadeIn
-.ms-u-fadeIn100, .ms-u-fadeIn200, .ms-u-fadeIn400, .ms-u-fadeIn500,
-.fadeIn100, .fadeIn200, .fadeIn400, .fadeIn500 {
+.ms-u-fadeIn100, .ms-u-fadeIn200, .ms-u-fadeIn400, .ms-u-fadeIn500 {
     -webkit-animation-duration: @ms-duration3;
     -webkit-animation-name: fadeIn;
     -webkit-animation-fill-mode: both;
@@ -314,18 +293,15 @@
     animation-name: fadeIn;
     animation-fill-mode: both;
 }
-.ms-u-fadeIn100,
-.fadeIn100 {
+.ms-u-fadeIn100 {
     -webkit-animation-duration: @ms-duration1;
     animation-duration: @ms-duration1;
 }
-.ms-u-fadeIn200,
-.fadeIn200 {
+.ms-u-fadeIn200 {
     -webkit-animation-duration: @ms-duration2;
     animation-duration: @ms-duration2;
 }
-.ms-u-fadeIn500,
-.fadeIn500 {
+.ms-u-fadeIn500 {
     -webkit-animation-duration: @ms-duration4;
     animation-duration: @ms-duration4;
 }
@@ -339,8 +315,7 @@
 }
 
 // fadeOut
-.ms-u-fadeOut100, .ms-u-fadeOut200, .ms-u-fadeOut400, .ms-u-fadeOut500,
-.fadeOut100, .fadeOut200, .fadeOut400, .fadeOut500 {
+.ms-u-fadeOut100, .ms-u-fadeOut200, .ms-u-fadeOut400, .ms-u-fadeOut500 {
     -webkit-animation-duration: @ms-duration3;
     -webkit-animation-name: fadeOut;
     -webkit-animation-fill-mode: both;
@@ -348,18 +323,15 @@
     animation-name: fadeOut;
     animation-fill-mode: both;
 }
-.ms-u-fadeOut100,
-.fadeOut100 {
+.ms-u-fadeOut100 {
     -webkit-animation-duration: 0.1s;
     animation-duration: 0.1s;
 }
-.ms-u-fadeOut200,
-.fadeOut200 {
+.ms-u-fadeOut200 {
     -webkit-animation-duration: @ms-duration1;
     animation-duration: @ms-duration1;
 }
-.ms-u-fadeOut500,
-.fadeOut500 {
+.ms-u-fadeOut500 {
     -webkit-animation-duration: @ms-duration4;
     animation-duration: @ms-duration4;
 }
@@ -373,8 +345,7 @@
 }
 
 // rotate90deg
-.ms-u-rotate90deg,
-.rotate90deg {
+.ms-u-rotate90deg {
     .animationMix(rotate90; 0.1s; @ms-ease2);
 }
 @-webkit-keyframes rotate90 {
@@ -387,8 +358,7 @@
 }
 
 // rotateN90deg
-.ms-u-rotateN90deg,
-.rotateN90deg {
+.ms-u-rotateN90deg {
     .animationMix(rotateN90; 0.1s; @ms-ease2);
 }
 @-webkit-keyframes rotateN90 {
@@ -401,49 +371,31 @@
 }
 
 // expandCollapse400
-.ms-u-expandCollapse400,
-.expandCollapse400 {
+.ms-u-expandCollapse400 {
     -webkit-transition: height @ms-duration3 @ms-ease2;
     transition: height @ms-duration3 @ms-ease2;
 }
 
 // expandCollapse200
-.ms-u-expandCollapse200,
-.expandCollapse200 {
+.ms-u-expandCollapse200 {
     -webkit-transition: height @ms-duration1 @ms-ease2;
     transition: height @ms-duration1 @ms-ease2;
 }
 
 // expandCollapse100
-.ms-u-expandCollapse100,
-.expandCollapse100 {
+.ms-u-expandCollapse100 {
     -webkit-transition: height 0.1s @ms-ease2;
     transition: height 0.1s @ms-ease2;
 }
 
 // delay100
-.ms-u-delay100,
-.delay100 {
+.ms-u-delay100 {
     -webkit-animation-delay: @ms-duration1;
     animation-delay: @ms-duration1;
 }
 
 // delay200
-.ms-u-delay200,
-.delay200 {
+.ms-u-delay200 {
     -webkit-animation-delay: .267s;
     animation-delay: .267s;
 }
-
-
-// PLEASE NOTE:
-// THE VARIABLES BELOW WILL BE DEPRECATED IN A FUTURE FABRIC RELEASE
-
-// LEGACY ANIMATION VARIABLES:
-
-@ease1:     @ms-ease1;
-@ease2:     @ms-ease2;
-@duration1: @ms-duration1;
-@duration2: @ms-duration2;
-@duration3: @ms-duration3;
-@duration4: @ms-duration4;
