--- a/src/less/_Fabric.Grid.less
+++ b/src/less/_Fabric.Grid.less
@@ -8,7 +8,7 @@
 //
 .ms-Grid {
   .ms-u-borderBox;
-  .clearfix;
+  .ms-u-clearfix;
   padding: 0 8px;
 }
 
@@ -17,7 +17,7 @@
 .ms-Grid-row {
   margin: 0 -8px;
   .ms-u-borderBox;
-  .clearfix;
+  .ms-u-clearfix;
 }
 
 //== Grid cells
