--- a/src/less/_Fabric.Typography.Variables.less
+++ b/src/less/_Fabric.Typography.Variables.less
@@ -13,41 +13,13 @@
 //== Type sizes
 //
 
-@ms-font-size-su:          42px;
-@ms-font-size-xxl:         28px;
-@ms-font-size-xl:          21px;
-@ms-font-size-l:           17px;
-@ms-font-size-m-plus:      15px;
-@ms-font-size-m:           14px;
-@ms-font-size-s-plus:      13px;
-@ms-font-size-s:           12px;
-@ms-font-size-xs:          11px;
-@ms-font-size-mi:          10px;
-
-
-
-// PLEASE NOTE:
-// ALL VARIABLES BELOW WILL BE DEPRECATED IN A FUTURE FABRIC RELEASE
-
-// LEGACY FONT VARIABLES:
-
-//== Font weights/families
-//
-@font-family-light:     @ms-font-family-light;
-@font-family-regular:   @ms-font-family-regular;
-@font-family-semilight: @ms-font-family-semilight;
-@font-family-semibold:  @ms-font-family-semibold;
-
-//== Type sizes
-//
-@font-size-su:          @ms-font-size-su;
-@font-size-xxl:         @ms-font-size-xxl;
-@font-size-xl:          @ms-font-size-xl;
-@font-size-l:           @ms-font-size-l;
-@font-size-m-plus:      @ms-font-size-m-plus;
-@font-size-m:           @ms-font-size-m;
-@font-size-s-plus:      @ms-font-size-s-plus;
-@font-size-s:           @ms-font-size-s;
-@font-size-xs:          @ms-font-size-xs;
-@font-size-mi:          @ms-font-size-mi;
-
+@ms-fontSize-su:          42px;
+@ms-fontSize-xxl:         28px;
+@ms-fontSize-xl:          21px;
+@ms-fontSize-l:           17px;
+@ms-fontSize-mPlus:      15px;
+@ms-fontSize-m:           14px;
+@ms-fontSize-s-plus:      13px;
+@ms-fontSize-s:           12px;
+@ms-fontSize-xs:          11px;
+@ms-fontSize-mi:          10px;
