--- a/src/less/_Fabric.Utilities.less
+++ b/src/less/_Fabric.Utilities.less
@@ -8,10 +8,7 @@
 }
 
 // Ensures the block expands to the full height to enclose its floated childen.
-//
-// The .clearfix class is deprecated and will be removed in a future release.
-.ms-u-clearfix,
-.clearfix {
+.ms-u-clearfix {
   *zoom: 1;
   &:before,
   &:after {
