--- a/src/templates/individual-component-example.html
+++ b/src/templates/individual-component-example.html
@@ -65,7 +65,7 @@
 </head>
 
 <body>
-  <h1 class="ms-font-su ms-font-color-white ms-bgColor-themeDarker"><%= componentName %></h1>
+  <h1 class="ms-font-su ms-fontColor-white ms-bgColor-themeDarker"><%= componentName %></h1>
   <div id="componentWrapper">
     <%= stored %>
   </div>
