--- a/src/less/_Fabric.Color.Mixins.less
+++ b/src/less/_Fabric.Color.Mixins.less
@@ -7,244 +7,216 @@
 //== Background colors
 //
 // Theme colors
-.ms-bg-color-themeDark, .ms-bg-color-themeDark-hover:hover,
-.ms-bgColor-themeDark, .ms-bgColor-themeDark--hover:hover {
+.ms-bgColor-themeDark,
+.ms-bgColor-themeDark--hover:hover {
   background-color: @ms-color-themeDark;
 }
 
-.ms-bg-color-themeDarkAlt, .ms-bg-color-themeDarkAlt-hover:hover,
-.ms-bgColor-themeDarkAlt, .ms-bgColor-themeDarkAlt--hover:hover {
+.ms-bgColor-themeDarkAlt, 
+.ms-bgColor-themeDarkAlt--hover:hover {
   background-color: @ms-color-themeDarkAlt;
 }
 
-.ms-bg-color-themeDarker, .ms-bg-color-themeDarker-hover:hover,
-.ms-bgColor-themeDarker, .ms-bgColor-themeDarker--hover:hover {
+.ms-bgColor-themeDarker, 
+.ms-bgColor-themeDarker--hover:hover {
   background-color: @ms-color-themeDarker;
 }
 
-.ms-bg-color-themePrimary, .ms-bg-color-themePrimary-hover:hover,
-.ms-bgColor-themePrimary, .ms-bgColor-themePrimary--hover:hover {
+.ms-bgColor-themePrimary, 
+.ms-bgColor-themePrimary--hover:hover {
   background-color: @ms-color-themePrimary;
 }
 
-.ms-bg-color-themeSecondary, .ms-bg-color-themeSecondary-hover:hover,
-.ms-bgColor-themeSecondary, .ms-bgColor-themeSecondary--hover:hover {
+.ms-bgColor-themeSecondary, 
+.ms-bgColor-themeSecondary--hover:hover {
   background-color: @ms-color-themeSecondary;
 }
 
-.ms-bg-color-themeTertiary, .ms-bg-color-themeTertiary-hover:hover,
-.ms-bgColor-themeTertiary, .ms-bgColor-themeTertiary--hover:hover {
+.ms-bgColor-themeTertiary, 
+.ms-bgColor-themeTertiary--hover:hover {
   background-color: @ms-color-themeTertiary;
 }
 
-.ms-bg-color-themeLight, .ms-bg-color-themeLight-hover:hover,
-.ms-bgColor-themeLight, .ms-bgColor-themeLight--hover:hover {
+.ms-bgColor-themeLight, 
+.ms-bgColor-themeLight--hover:hover {
   background-color: @ms-color-themeLight;
 }
 
-.ms-bg-color-themeLighter, .ms-bg-color-themeLighter-hover:hover,
-.ms-bgColor-themeLighter, .ms-bgColor-themeLighter--hover:hover {
+.ms-bgColor-themeLighter, 
+.ms-bgColor-themeLighter--hover:hover {
   background-color: @ms-color-themeLighter;
 }
 
-.ms-bg-color-themeLighterAlt, .ms-bg-color-themeLighterAlt-hover:hover,
-.ms-bgColor-themeLighterAlt, .ms-bgColor-themeLighterAlt--hover:hover {
+.ms-bgColor-themeLighterAlt, 
+.ms-bgColor-themeLighterAlt--hover:hover {
   background-color: @ms-color-themeLighterAlt;
 }
 
-
 // Neutral colors
-.ms-bg-color-black, .ms-bg-color-black-hover:hover,
-.ms-bgColor-black, .ms-bgColor-black--hover:hover {
+.ms-bgColor-black, 
+.ms-bgColor-black--hover:hover {
   background-color: @ms-color-black;
 }
 
-.ms-bg-color-neutralDark, .ms-bg-color-neutralDark-hover:hover,
-.ms-bgColor-neutralDark, .ms-bgColor-neutralDark--hover:hover {
+.ms-bgColor-neutralDark, 
+.ms-bgColor-neutralDark--hover:hover {
   background-color: @ms-color-neutralDark;
 }
 
-.ms-bg-color-neutralPrimary, .ms-bg-color-neutralPrimary-hover:hover,
-.ms-bgColor-neutralPrimary, .ms-bgColor-neutralPrimary--hover:hover {
+.ms-bgColor-neutralPrimary, 
+.ms-bgColor-neutralPrimary--hover:hover {
   background-color: @ms-color-neutralPrimary;
 }
 
-.ms-bg-color-neutralSecondary, .ms-bg-color-neutralSecondary-hover:hover,
-.ms-bgColor-neutralSecondary, .ms-bgColor-neutralSecondary--hover:hover {
+.ms-bgColor-neutralSecondary, 
+.ms-bgColor-neutralSecondary--hover:hover {
   background-color: @ms-color-neutralSecondary;
 }
 
-.ms-bg-color-neutralSecondaryAlt, .ms-bg-color-neutralSecondaryAlt-hover:hover,
-.ms-bgColor-neutralSecondaryAlt, .ms-bgColor-neutralSecondaryAlt--hover:hover {
+.ms-bgColor-neutralSecondaryAlt, 
+.ms-bgColor-neutralSecondaryAlt--hover:hover {
   background-color: @ms-color-neutralSecondaryAlt;
 }
 
-.ms-bg-color-neutralTertiary, .ms-bg-color-neutralTertiary-hover:hover,
-.ms-bgColor-neutralTertiary, .ms-bgColor-neutralTertiary--hover:hover {
+.ms-bgColor-neutralTertiary, 
+.ms-bgColor-neutralTertiary--hover:hover {
   background-color: @ms-color-neutralTertiary;
 }
 
-.ms-bg-color-neutralTertiaryAlt, .ms-bg-color-neutralTertiaryAlt-hover:hover,
-.ms-bgColor-neutralTertiaryAlt, .ms-bgColor-neutralTertiaryAlt--hover:hover {
+.ms-bgColor-neutralTertiaryAlt, 
+.ms-bgColor-neutralTertiaryAlt--hover:hover {
   background-color: @ms-color-neutralTertiaryAlt;
 }
 
-.ms-bg-color-neutralLight, .ms-bg-color-neutralLight-hover:hover,
-.ms-bgColor-neutralLight, .ms-bgColor-neutralLight--hover:hover {
+.ms-bgColor-neutralLight, 
+.ms-bgColor-neutralLight--hover:hover {
   background-color: @ms-color-neutralLight;
 }
 
-.ms-bg-color-neutralLighter, .ms-bg-color-neutralLighter-hover:hover,
-.ms-bgColor-neutralLighter, .ms-bgColor-neutralLighter--hover:hover {
+.ms-bgColor-neutralLighter, 
+.ms-bgColor-neutralLighter--hover:hover {
   background-color: @ms-color-neutralLighter;
 }
 
-.ms-bg-color-neutralLighterAlt, .ms-bg-color-neutralLighterAlt-hover:hover,
-.ms-bgColor-neutralLighterAlt, .ms-bgColor-neutralLighterAlt--hover:hover {
+.ms-bgColor-neutralLighterAlt, 
+.ms-bgColor-neutralLighterAlt--hover:hover {
   background-color: @ms-color-neutralLighterAlt;
 }
 
-.ms-bg-color-white, .ms-bg-color-white-hover:hover,
-.ms-bgColor-white, .ms-bgColor-white--hover:hover {
+.ms-bgColor-white, 
+.ms-bgColor-white--hover:hover {
   background-color: @ms-color-white;
 }
 
 
 // Brand and accent colors
-.ms-bg-color-yellow,
 .ms-bgColor-yellow {
   background-color: @ms-color-yellow;
 }
 
-.ms-bg-color-yellowLight,
 .ms-bgColor-yellowLight {
   background-color: @ms-color-yellowLight;
 }
 
-.ms-bg-color-orange,
 .ms-bgColor-orange {
   background-color: @ms-color-orange;
 }
 
-.ms-bg-color-orangeLight,
 .ms-bgColor-orangeLight {
   background-color: @ms-color-orangeLight;
 }
 
-.ms-bg-color-redDark,
 .ms-bgColor-redDark {
   background-color: @ms-color-redDark;
 }
 
-.ms-bg-color-red,
 .ms-bgColor-red {
   background-color: @ms-color-red;
 }
 
-.ms-bg-color-magentaDark,
 .ms-bgColor-magentaDark {
   background-color: @ms-color-magentaDark;
 }
 
-.ms-bg-color-magenta,
 .ms-bgColor-magenta {
   background-color: @ms-color-magenta;
 }
 
-.ms-bg-color-magentaLight,
 .ms-bgColor-magentaLight {
   background-color: @ms-color-magentaLight;
 }
 
-.ms-bg-color-purpleDark,
 .ms-bgColor-purpleDark {
   background-color: @ms-color-purpleDark;
 }
 
-.ms-bg-color-purple,
 .ms-bgColor-purple {
   background-color: @ms-color-purple;
 }
 
-.ms-bg-color-purpleLight,
 .ms-bgColor-purpleLight {
   background-color: @ms-color-purpleLight;
 }
 
-.ms-bg-color-blueDark,
 .ms-bgColor-blueDark {
   background-color: @ms-color-blueDark;
 }
 
-.ms-bg-color-blueMid,
 .ms-bgColor-blueMid {
   background-color: @ms-color-blueMid;
 }
 
-.ms-bg-color-blue,
 .ms-bgColor-blue {
   background-color: @ms-color-blue;
 }
 
-.ms-bg-color-blueLight,
 .ms-bgColor-blueLight {
   background-color: @ms-color-blueLight;
 }
 
-.ms-bg-color-tealDark,
 .ms-bgColor-tealDark {
   background-color: @ms-color-tealDark;
 }
 
-.ms-bg-color-teal,
 .ms-bgColor-teal {
   background-color: @ms-color-teal;
 }
 
-.ms-bg-color-tealLight,
 .ms-bgColor-tealLight {
   background-color: @ms-color-tealLight;
 }
 
-.ms-bg-color-greenDark,
 .ms-bgColor-greenDark {
   background-color: @ms-color-greenDark;
 }
 
-.ms-bg-color-green,
 .ms-bgColor-green {
   background-color: @ms-color-green;
 }
 
-.ms-bg-color-greenLight,
 .ms-bgColor-greenLight {
   background-color: @ms-color-greenLight;
 }
 
-
 // Others
-.ms-bg-color-error,
 .ms-bgColor-error {
   background-color: @ms-color-errorBackground;
 }
 
-.ms-bg-color-alert,
 .ms-bgColor-alert {
   background-color: @ms-color-alertBackground;
 }
 
-.ms-bg-color-info,
 .ms-bgColor-info {
   background-color: @ms-color-infoBackground;
 }
 
-.ms-bg-color-success,
 .ms-bgColor-success {
   background-color: @ms-color-successBackground;
 }
 
-.ms-bg-color-orangeLighter, .ms-bg-color-orangeLighter-hover:hover,
-.ms-bgColor-orangeLighter, .ms-bgColor-orangeLighter--hover:hover {
+.ms-bgColor-orangeLighter, 
+.ms-bgColor-orangeLighter--hover:hover {
   background-color: @ms-color-orangeLighter;
 }
 
@@ -253,248 +225,222 @@
 //
 
 // Theme colors
-.ms-border-color-themeDark, .ms-border-color-themeDark-hover:hover,
-.ms-borderColor-themeDark, .ms-borderColor-themeDark--hover:hover {
+.ms-borderColor-themeDark, 
+.ms-borderColor-themeDark--hover:hover {
   border-color: @ms-color-themeDark;
 }
 
-.ms-border-color-themeDarkAlt, .ms-border-color-themeDarkAlt-hover:hover,
-.ms-borderColor-themeDarkAlt, .ms-borderColor-themeDarkAlt--hover:hover {
+.ms-borderColor-themeDarkAlt, 
+.ms-borderColor-themeDarkAlt--hover:hover {
   border-color: @ms-color-themeDarkAlt;
 }
 
-.ms-border-color-themeDarker, .ms-border-color-themeDarker-hover:hover,
-.ms-borderColor-themeDarker, .ms-borderColor-themeDarker--hover:hover {
+.ms-borderColor-themeDarker, 
+.ms-borderColor-themeDarker--hover:hover {
   border-color: @ms-color-themeDarker;
 }
 
-.ms-border-color-themePrimary, .ms-border-color-themePrimary-hover:hover,
-.ms-borderColor-themePrimary, .ms-borderColor-themePrimary--hover:hover {
+.ms-borderColor-themePrimary, 
+.ms-borderColor-themePrimary--hover:hover {
   border-color: @ms-color-themePrimary;
 }
 
-.ms-border-color-themeSecondary, .ms-border-color-themeSecondary-hover:hover,
-.ms-borderColor-themeSecondary, .ms-borderColor-themeSecondary--hover:hover {
+.ms-borderColor-themeSecondary, 
+.ms-borderColor-themeSecondary--hover:hover {
   border-color: @ms-color-themeSecondary;
 }
 
-.ms-border-color-themeTertiary, .ms-border-color-themeTertiary-hover:hover,
-.ms-borderColor-themeTertiary, .ms-borderColor-themeTertiary--hover:hover {
+.ms-borderColor-themeTertiary, 
+.ms-borderColor-themeTertiary--hover:hover {
   border-color: @ms-color-themeTertiary;
 }
 
-.ms-border-color-themeLight, .ms-border-color-themeLight-hover:hover,
-.ms-borderColor-themeLight, .ms-borderColor-themeLight--hover:hover {
+.ms-borderColor-themeLight, 
+.ms-borderColor-themeLight--hover:hover {
   border-color: @ms-color-themeLight;
 }
 
-.ms-border-color-themeLighter, .ms-border-color-themeLighter-hover:hover,
-.ms-borderColor-themeLighter, .ms-borderColor-themeLighter--hover:hover {
+.ms-borderColor-themeLighter, 
+.ms-borderColor-themeLighter--hover:hover {
   border-color: @ms-color-themeLighter;
 }
 
-.ms-border-color-themeLighterAlt, .ms-border-color-themeLighterAlt-hover:hover,
-.ms-borderColor-themeLighterAlt, .ms-borderColor-themeLighterAlt--hover:hover {
+.ms-borderColor-themeLighterAlt, 
+\.ms-borderColor-themeLighterAlt--hover:hover {
   border-color: @ms-color-themeLighterAlt;
 }
 
 
 // Neutral colors
-.ms-border-color-black, .ms-border-color-black-hover:hover,
-.ms-borderColor-black, .ms-borderColor-black--hover:hover {
+.ms-borderColor-black, 
+.ms-borderColor-black--hover:hover {
   border-color: @ms-color-black;
 }
 
-.ms-border-color-neutralDark, .ms-border-color-neutralDark-hover:hover,
-.ms-borderColor-neutralDark, .ms-borderColor-neutralDark--hover:hover {
+.ms-borderColor-neutralDark, 
+.ms-borderColor-neutralDark--hover:hover {
   border-color: @ms-color-neutralDark;
 }
 
-.ms-border-color-neutralPrimary, .ms-border-color-neutralPrimary-hover:hover,
-.ms-borderColor-neutralPrimary, .ms-borderColor-neutralPrimary--hover:hover {
+.ms-borderColor-neutralPrimary, 
+.ms-borderColor-neutralPrimary--hover:hover {
   border-color: @ms-color-neutralPrimary;
 }
 
-.ms-border-color-neutralSecondary, .ms-border-color-neutralSecondary-hover:hover,
-.ms-borderColor-neutralSecondary, .ms-borderColor-neutralSecondary--hover:hover {
+.ms-borderColor-neutralSecondary, 
+.ms-borderColor-neutralSecondary--hover:hover {
   border-color: @ms-color-neutralSecondary;
 }
 
-.ms-border-color-neutralSecondaryAlt, .ms-border-color-neutralSecondaryAlt-hover:hover,
-.ms-borderColor-neutralSecondaryAlt, .ms-borderColor-neutralSecondaryAlt--hover:hover {
+.ms-borderColor-neutralSecondaryAlt, 
+.ms-borderColor-neutralSecondaryAlt--hover:hover {
   border-color: @ms-color-neutralSecondaryAlt;
 }
 
-.ms-border-color-neutralTertiary, .ms-border-color-neutralTertiary-hover:hover,
-.ms-borderColor-neutralTertiary, .ms-borderColor-neutralTertiary--hover:hover {
+.ms-borderColor-neutralTertiary, 
+.ms-borderColor-neutralTertiary--hover:hover {
   border-color: @ms-color-neutralTertiary;
 }
 
-.ms-border-color-neutralTertiaryAlt, .ms-border-color-neutralTertiaryAlt-hover:hover,
-.ms-borderColor-neutralTertiaryAlt, .ms-borderColor-neutralTertiaryAlt--hover:hover {
+.ms-borderColor-neutralTertiaryAlt, 
+.ms-borderColor-neutralTertiaryAlt--hover:hover {
   border-color: @ms-color-neutralTertiaryAlt;
 }
 
-.ms-border-color-neutralLight, .ms-border-color-neutralLight-hover:hover,
-.ms-borderColor-neutralLight, .ms-borderColor-neutralLight--hover:hover {
+.ms-borderColor-neutralLight, 
+.ms-borderColor-neutralLight--hover:hover {
   border-color: @ms-color-neutralLight;
 }
 
-.ms-border-color-neutralLighter, .ms-border-color-neutralLighter-hover:hover,
-.ms-borderColor-neutralLighter, .ms-borderColor-neutralLighter--hover:hover {
+.ms-borderColor-neutralLighter, 
+.ms-borderColor-neutralLighter--hover:hover {
   border-color: @ms-color-neutralLighter;
 }
 
-.ms-border-color-neutralLighterAlt, .ms-border-color-neutralLighterAlt-hover:hover,
-.ms-borderColor-neutralLighterAlt, .ms-borderColor-neutralLighterAlt--hover:hover {
+.ms-borderColor-neutralLighterAlt, 
+.ms-borderColor-neutralLighterAlt--hover:hover {
   border-color: @ms-color-neutralLighterAlt;
 }
 
-.ms-border-color-white, .ms-border-color-white-hover:hover,
-.ms-borderColor-white, .ms-borderColor-white--hover:hover{ border-color: @ms-color-white; }
-
+.ms-borderColor-white, 
+.ms-borderColor-white--hover:hover { 
+  border-color: @ms-color-white; 
+}
 
 // Brand and accent colors
-.ms-border-color-yellow,
 .ms-borderColor-yellow {
   border-color: @ms-color-yellow;
 }
 
-.ms-border-color-yellowLight,
 .ms-borderColor-yellowLight {
   border-color: @ms-color-yellowLight;
 }
 
-.ms-border-color-orange,
 .ms-borderColor-orange {
   border-color: @ms-color-orange;
 }
 
-.ms-border-color-orangeLight,
 .ms-borderColor-orangeLight {
   border-color: @ms-color-orangeLight;
 }
 
-.ms-border-color-redDark,
 .ms-borderColor-redDark {
   border-color: @ms-color-redDark;
 }
 
-.ms-border-color-red,
 .ms-borderColor-red {
   border-color: @ms-color-red;
 }
 
-.ms-border-color-magentaDark,
 .ms-borderColor-magentaDark {
   border-color: @ms-color-magentaDark;
 }
 
-.ms-border-color-magenta,
 .ms-borderColor-magenta {
   border-color: @ms-color-magenta;
 }
 
-.ms-border-color-magentaLight,
 .ms-borderColor-magentaLight {
   border-color: @ms-color-magentaLight;
 }
 
-.ms-border-color-purpleDark,
 .ms-borderColor-purpleDark {
   border-color: @ms-color-purpleDark;
 }
 
-.ms-border-color-purple,
 .ms-borderColor-purple {
   border-color: @ms-color-purple;
 }
 
-.ms-border-color-purpleLight,
 .ms-borderColor-purpleLight {
   border-color: @ms-color-purpleLight;
 }
 
-.ms-border-color-blueDark,
 .ms-borderColor-blueDark {
   border-color: @ms-color-blueDark;
 }
 
-.ms-border-color-blueMid,
 .ms-borderColor-blueMid {
   border-color: @ms-color-blueMid;
 }
 
-.ms-border-color-blue,
 .ms-borderColor-blue {
   border-color: @ms-color-blue;
 }
 
-.ms-border-color-blueLight,
 .ms-borderColor-blueLight {
   border-color: @ms-color-blueLight;
 }
 
-.ms-border-color-tealDark,
 .ms-borderColor-tealDark {
   border-color: @ms-color-tealDark;
 }
 
-.ms-border-color-teal,
 .ms-borderColor-teal {
   border-color: @ms-color-teal;
 }
 
-.ms-border-color-tealLight,
 .ms-borderColor-tealLight {
   border-color: @ms-color-tealLight;
 }
 
-.ms-border-color-greenDark,
 .ms-borderColor-greenDark {
   border-color: @ms-color-greenDark;
 }
 
-.ms-border-color-green,
 .ms-borderColor-green {
   border-color: @ms-color-green;
 }
 
-.ms-border-color-greenLight,
 .ms-borderColor-greenLight {
   border-color: @ms-color-greenLight;
 }
 
 // Status colors
-.ms-border-color-error,
 .ms-borderColor-error {
   border-color: @ms-color-error;
 }
 
-.ms-border-color-success,
 .ms-borderColor-success {
   border-color: @ms-color-success;
 }
 
-.ms-border-color-info,
 .ms-borderColor-info {
   border-color: @ms-color-info;
 }
 
-.ms-border-color-alert,
 .ms-borderColor-alert {
   border-color: @ms-color-alert;
 }
 
-
 // Others
-.ms-border-color-orangeLighter, .ms-border-color-orangeLighter-hover:hover,
-.ms-borderColor-orangeLighter, .ms-borderColor-orangeLighter--hover:hover {
+.ms-borderColor-orangeLighter, 
+.ms-borderColor-orangeLighter--hover:hover {
   border-color: @ms-color-orangeLighter;
 }
 
 // Individual borders, by request
-.ms-border-color-top-themePrimary, .ms-border-color-top-themePrimary-hover:hover,
-.ms-borderColorTop-themePrimary, .ms-borderColorTop-themePrimary--hover:hover {
+.ms-borderColorTop-themePrimary, 
+.ms-borderColorTop-themePrimary--hover:hover {
   border-top-color: @ms-color-themePrimary;
 }
