--- a/src/less/_Office.Color.Mixins.less
+++ b/src/less/_Office.Color.Mixins.less
@@ -8,159 +8,160 @@
 
 //== Font colors
 //
-.ms-font-color-officeAccent1, .ms-font-color-officeAccent1-hover:hover,
-.ms-fontColor-officeAccent1, .ms-fontColor-officeAccent1--hover:hover { 
+
+.ms-fontColor-officeAccent1, 
+.ms-fontColor-officeAccent1--hover:hover { 
   color: @ms-color-officeAccent1; 
 }
 
-.ms-font-color-officeAccent2, .ms-font-color-officeAccent2-hover:hover,
-.ms-fontColor-officeAccent2, .ms-fontColor-officeAccent2--hover:hover { 
+.ms-fontColor-officeAccent2, 
+.ms-fontColor-officeAccent2--hover:hover { 
   color: @ms-color-officeAccent2; 
 }
 
-.ms-font-color-officeAccent3, .ms-font-color-officeAccent3-hover:hover,
-.ms-fontColor-officeAccent3, .ms-fontColor-officeAccent3--hover:hover { 
+.ms-fontColor-officeAccent3, 
+.ms-fontColor-officeAccent3--hover:hover { 
   color: @ms-color-officeAccent3; 
 }
 
-.ms-font-color-officeAccent4, .ms-font-color-officeAccent4-hover:hover,
-.ms-fontColor-officeAccent4, .ms-fontColor-officeAccent4--hover:hover { 
+.ms-fontColor-officeAccent4, 
+.ms-fontColor-officeAccent4--hover:hover { 
   color: @ms-color-officeAccent4; 
 }
 
-.ms-font-color-officeAccent5, .ms-font-color-officeAccent5-hover:hover,
-.ms-fontColor-officeAccent5, .ms-fontColor-officeAccent5--hover:hover { 
+.ms-fontColor-officeAccent5, 
+.ms-fontColor-officeAccent5--hover:hover { 
   color: @ms-color-officeAccent5; 
 }
 
-.ms-font-color-officeAccent6, .ms-font-color-officeAccent6-hover:hover,
-.ms-fontColor-officeAccent6, .ms-fontColor-officeAccent6--hover:hover { 
+.ms-fontColor-officeAccent6, 
+.ms-fontColor-officeAccent6--hover:hover { 
   color: @ms-color-officeAccent6; 
 }
 
-.ms-font-color-officeAccent7, .ms-font-color-officeAccent7-hover:hover,
-.ms-fontColor-officeAccent7, .ms-fontColor-officeAccent7--hover:hover { 
+.ms-fontColor-officeAccent7, 
+.ms-fontColor-officeAccent7--hover:hover { 
   color: @ms-color-officeAccent7; 
 }
 
-.ms-font-color-officeAccent8, .ms-font-color-officeAccent8-hover:hover,
-.ms-fontColor-officeAccent8, .ms-fontColor-officeAccent8--hover:hover { 
+.ms-fontColor-officeAccent8, 
+.ms-fontColor-officeAccent8--hover:hover { 
   color: @ms-color-officeAccent8; 
 }
 
-.ms-font-color-officeAccent9, .ms-font-color-officeAccent9-hover:hover,
-.ms-fontColor-officeAccent9, .ms-fontColor-officeAccent9--hover:hover { 
+.ms-fontColor-officeAccent9, 
+.ms-fontColor-officeAccent9--hover:hover { 
   color: @ms-color-officeAccent9; 
 }
 
-.ms-font-color-officeAccent10, .ms-font-color-officeAccent10-hover:hover,
-.ms-fontColor-officeAccent10, .ms-fontColor-officeAccent10--hover:hover { 
+.ms-fontColor-officeAccent10, 
+.ms-fontColor-officeAccent10--hover:hover { 
   color: @ms-color-officeAccent10; 
 }
 
 
 //== Background colors
 //
-.ms-bg-color-officeAccent1, .ms-bg-color-officeAccent1-hover:hover,
-.ms-bgColor-officeAccent1, .ms-bgColor-officeAccent1--hover:hover { 
+.ms-bgColor-officeAccent1, 
+.ms-bgColor-officeAccent1--hover:hover { 
   background-color: @ms-color-officeAccent1; 
 }
 
-.ms-bg-color-officeAccent2, .ms-bg-color-officeAccent2-hover:hover,
-.ms-bgColor-officeAccent2, .ms-bgColor-officeAccent2--hover:hover { 
+.ms-bgColor-officeAccent2, 
+.ms-bgColor-officeAccent2--hover:hover { 
   background-color: @ms-color-officeAccent2; 
 }
 
-.ms-bg-color-officeAccent3, .ms-bg-color-officeAccent3-hover:hover,
-.ms-bgColor-officeAccent3, .ms-bgColor-officeAccent3--hover:hover { 
+.ms-bgColor-officeAccent3, 
+.ms-bgColor-officeAccent3--hover:hover { 
   background-color: @ms-color-officeAccent3; 
 }
 
-.ms-bg-color-officeAccent4, .ms-bg-color-officeAccent4-hover:hover,
-.ms-bgColor-officeAccent4, .ms-bgColor-officeAccent4--hover:hover { 
+.ms-bgColor-officeAccent4, 
+.ms-bgColor-officeAccent4--hover:hover { 
   background-color: @ms-color-officeAccent4; 
 }
 
-.ms-bg-color-officeAccent5, .ms-bg-color-officeAccent5-hover:hover,
-.ms-bgColor-officeAccent5, .ms-bgColor-officeAccent5--hover:hover { 
+.ms-bgColor-officeAccent5, 
+.ms-bgColor-officeAccent5--hover:hover { 
   background-color: @ms-color-officeAccent5; 
 }
 
-.ms-bg-color-officeAccent6, .ms-bg-color-officeAccent6-hover:hover,
-.ms-bgColor-officeAccent6, .ms-bgColor-officeAccent6--hover:hover { 
+.ms-bgColor-officeAccent6, 
+.ms-bgColor-officeAccent6--hover:hover { 
   background-color: @ms-color-officeAccent6; 
 }
 
-.ms-bg-color-officeAccent7, .ms-bg-color-officeAccent7-hover:hover,
-.ms-bgColor-officeAccent7, .ms-bgColor-officeAccent7--hover:hover { 
+.ms-bgColor-officeAccent7, 
+.ms-bgColor-officeAccent7--hover:hover { 
   background-color: @ms-color-officeAccent7; 
 }
 
-.ms-bg-color-officeAccent8, .ms-bg-color-officeAccent8-hover:hover,
-.ms-bgColor-officeAccent8, .ms-bgColor-officeAccent8--hover:hover { 
+.ms-bgColor-officeAccent8, 
+.ms-bgColor-officeAccent8--hover:hover { 
   background-color: @ms-color-officeAccent8; 
 }
 
-.ms-bg-color-officeAccent9, .ms-bg-color-officeAccent9-hover:hover,
-.ms-bgColor-officeAccent9, .ms-bgColor-officeAccent9--hover:hover { 
+.ms-bgColor-officeAccent9, 
+.ms-bgColor-officeAccent9--hover:hover { 
   background-color: @ms-color-officeAccent9; 
 }
 
-.ms-bg-color-officeAccent10, .ms-bg-color-officeAccent10-hover:hover,
-.ms-bgColor-officeAccent10, .ms-bgColor-officeAccent10--hover:hover { 
+.ms-bgColor-officeAccent10, 
+.ms-bgColor-officeAccent10--hover:hover { 
   background-color: @ms-color-officeAccent10; 
 }
 
 
 //== Border colors
 //
-.ms-border-color-officeAccent1, .ms-border-color-officeAccent1-hover:hover,
-.ms-borderColor-officeAccent1, .ms-borderColor-officeAccent1--hover:hover { 
+.ms-borderColor-officeAccent1, 
+.ms-borderColor-officeAccent1--hover:hover { 
   border-color: @ms-color-officeAccent1; 
 }
 
-.ms-border-color-officeAccent2, .ms-border-color-officeAccent2-hover:hover,
-.ms-borderColor-officeAccent2, .ms-borderColor-officeAccent2--hover:hover { 
+.ms-borderColor-officeAccent2, 
+.ms-borderColor-officeAccent2--hover:hover { 
   border-color: @ms-color-officeAccent2; 
 }
 
-.ms-border-color-officeAccent3, .ms-border-color-officeAccent3-hover:hover,
-.ms-borderColor-officeAccent3, .ms-borderColor-officeAccent3--hover:hover { 
+.ms-borderColor-officeAccent3, 
+.ms-borderColor-officeAccent3--hover:hover { 
   border-color: @ms-color-officeAccent3; 
 }
 
-.ms-border-color-officeAccent4, .ms-border-color-officeAccent4-hover:hover,
-.ms-borderColor-officeAccent4, .ms-borderColor-officeAccent4--hover:hover { 
+.ms-borderColor-officeAccent4, 
+.ms-borderColor-officeAccent4--hover:hover { 
   border-color: @ms-color-officeAccent4; 
 }
 
-.ms-border-color-officeAccent5, .ms-border-color-officeAccent5-hover:hover,
-.ms-borderColor-officeAccent5, .ms-borderColor-officeAccent5--hover:hover { 
+.ms-borderColor-officeAccent5, 
+.ms-borderColor-officeAccent5--hover:hover { 
   border-color: @ms-color-officeAccent5; 
 }
 
-.ms-border-color-officeAccent6, .ms-border-color-officeAccent6-hover:hover,
-.ms-borderColor-officeAccent6, .ms-borderColor-officeAccent6--hover:hover { 
+.ms-borderColor-officeAccent6, 
+.ms-borderColor-officeAccent6--hover:hover { 
   border-color: @ms-color-officeAccent6; 
 }
 
-.ms-border-color-officeAccent7, .ms-border-color-officeAccent7-hover:hover,
-.ms-borderColor-officeAccent7, .ms-borderColor-officeAccent7--hover:hover { 
+.ms-borderColor-officeAccent7, 
+.ms-borderColor-officeAccent7--hover:hover { 
   border-color: @ms-color-officeAccent7; 
 }
 
-.ms-border-color-officeAccent8, .ms-border-color-officeAccent8-hover:hover,
-.ms-borderColor-officeAccent8, .ms-borderColor-officeAccent8--hover:hover { 
+.ms-borderColor-officeAccent8, 
+.ms-borderColor-officeAccent8--hover:hover { 
   border-color: @ms-color-officeAccent8; 
 }
 
-.ms-border-color-officeAccent9, .ms-border-color-officeAccent9-hover:hover,
-.ms-borderColor-officeAccent9, .ms-borderColor-officeAccent9--hover:hover { 
+.ms-borderColor-officeAccent9, 
+.ms-borderColor-officeAccent9--hover:hover { 
   border-color: @ms-color-officeAccent9; 
 }
 
-.ms-border-color-officeAccent10, .ms-border-color-officeAccent10-hover:hover,
-.ms-borderColor-officeAccent10, .ms-borderColor-officeAccent10--hover:hover { 
+.ms-borderColor-officeAccent10, 
+.ms-borderColor-officeAccent10--hover:hover { 
   border-color: @ms-color-officeAccent10; 
 }
 
