Removed more classes from individual files. Removed unused Office Colors variables.

--- a/src/components/Callout/Callout.less
+++ b/src/components/Callout/Callout.less
@@ -210,7 +210,7 @@
     // Title - set size and color
     .ms-Callout-title {
       font-family: @ms-font-family-light;
-      font-size: @ms-font-size-xxl;
+      font-size: @ms-fontSize-xxl;
       color: @ms-color-white;
     }
   }
@@ -416,7 +416,7 @@
     .ms-Callout.ms-Callout--OOBE.ms-Callout--arrowRight::after { right: -6px; }
   }
 
-  @media screen and (min-width: @screen-md-min) and (-ms-high-contrast: active) {
+  @media screen and (min-width: @ms-screen-md-min) and (-ms-high-contrast: active) {
     .ms-Callout {
       // Arrows left and right
       &.ms-Callout--arrowLeft,
