--- a/src/components/Dialog/Dialog.less
+++ b/src/components/Dialog/Dialog.less
@@ -164,7 +164,7 @@
 //
 .ms-Dialog.ms-Dialog--multiline {
   .ms-Dialog-title {
-    font-size: @ms-font-size-xxl;
+    font-size: @ms-fontSize-xxl;
   }
 
   .ms-Dialog-inner {
@@ -183,8 +183,8 @@
   }
 
   .ms-Dialog-title {
-    font-size: @ms-font-size-xxl;
-    font-family: @font-family-light;
+    font-size: @ms-fontSize-xxl;
+    font-family: @ms-font-family-light;
     color: @ms-color-white;
   }
 
