--- a/src/components/OrgChart/OrgChart.less
+++ b/src/components/OrgChart/OrgChart.less
@@ -31,7 +31,7 @@
     position: absolute;
     left: 0;
     right: 0;
-    background-color: @color-neutralTertiary;
+    background-color: @ms-color-neutralTertiary;
   }
 }
 
@@ -46,7 +46,7 @@
   left: auto;
   right: 2px;
   bottom: -1px;
-  border: 2px solid @color-white;
+  border: 2px solid @ms-color-white;
 }
 
 .ms-OrgChart-listItemBtn {
@@ -63,7 +63,7 @@
 }
 
 .ms-OrgChart-groupTitle {
-  font-family: @font-family-semilight;
-  color: @color-neutralSecondary;
-  font-size: @font-size-m;
+  font-family: @ms-font-family-semilight;
+  color: @ms-color-neutralSecondary;
+  font-size: @ms-fontSize-m;
 }
