--- a/src/components/PersonaCard/PersonaCard.less
+++ b/src/components/PersonaCard/PersonaCard.less
@@ -26,7 +26,7 @@
     .ms-Persona-imageArea {
       width: 100px;
       height: 100px;
-      background-color: @color-neutralLighter;
+      background-color: @ms-color-neutralLighter;
     }
     .ms-Persona-imageCircle {
       width: 80px;
@@ -37,7 +37,7 @@
       position: absolute;
       left: 0;
       right: 0;
-      background-color: @color-neutralTertiary;
+      background-color: @ms-color-neutralTertiary;
     }
     .ms-Persona.ms-Persona--xl .ms-Persona-image {
       width: 80px;
@@ -47,7 +47,7 @@
       height: 12px;
       width: 12px;
       border-radius: 50%;
-      border: 2px solid @color-neutralLighter;
+      border: 2px solid @ms-color-neutralLighter;
       left: auto;
       top: auto;
       right: 15px;
@@ -69,8 +69,8 @@
   list-style: none;
   margin: 0;
   padding: 0 10px;
-  border-bottom: 1px solid @color-neutralTertiaryAlt;
-  background-color: @color-white;
+  border-bottom: 1px solid @ms-color-neutralTertiaryAlt;
+  background-color: @ms-color-white;
   .ms-u-borderBox;
   height: 50px;
 }
@@ -149,7 +149,7 @@
   min-height: 48px;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: @color-white;
+  background-color: @ms-color-white;
 }
 
 .ms-PersonaCard-actionDetails {
@@ -157,9 +157,9 @@
   width: 20%;
   float: left;
   min-height: 48px;
-  font-family: @font-family-semilight;
-  font-size: @font-size-m;
-  color: @color-neutralSecondary;
+  font-family: @ms-font-family-semilight;
+  font-size: @ms-fontSize-m;
+  color: @ms-color-neutralSecondary;
   padding: 9px 20px;
   transition: max-height @ms-duration2 @ms-ease1 .2s;
   box-sizing: border-box;
@@ -287,7 +287,7 @@
   .ms-Persona-imageArea {
     width: 50px;
     height: 50px;
-    background-color: @color-white;
+    background-color: @ms-color-white;
   }
 
   .ms-Persona-imageCircle {
@@ -309,7 +309,7 @@
   left: auto;
   right: 2px;
   bottom: -1px;
-  border: 2px solid @color-white;
+  border: 2px solid @ms-color-white;
 }
 
 
