--- a/src/components/Pivot/Pivot.less
+++ b/src/components/Pivot/Pivot.less
@@ -149,7 +149,7 @@
     .ms-Pivot-link {
       // Selected state
       &.is-selected {
-        font-family: @font-family-semibold;
+        font-family: @ms-font-family-semibold;
       }
     }
   }
